// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ensuring loading buttons match snapshot renders the large danger loading button correctly 1`] = `
<button
  className="sc-kEYyzF epnNGE"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the large default loading button correctly 1`] = `
<button
  className="sc-ckVGcZ hFWsAT"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the large primary loading button correctly 1`] = `
<button
  className="sc-kgoBCf kYswgz"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the large success loading button correctly 1`] = `
<button
  className="sc-cMljjf liidPb"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the large warning loading button correctly 1`] = `
<button
  className="sc-eHgmQL ghyAof"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the medium danger loading button correctly 1`] = `
<button
  className="sc-kkGfuU jGcWbf"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the medium default loading button correctly 1`] = `
<button
  className="sc-jKJlTe jcYjQf"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the medium primary loading button correctly 1`] = `
<button
  className="sc-kGXeez gCxVoz"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the medium success loading button correctly 1`] = `
<button
  className="sc-jAaTju focFly"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the medium warning loading button correctly 1`] = `
<button
  className="sc-cvbbAY kIlToQ"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the small danger loading button correctly 1`] = `
<button
  className="sc-iAyFgw dkZyKB"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the small default loading button correctly 1`] = `
<button
  className="sc-eNQAEJ yRLrQ"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the small primary loading button correctly 1`] = `
<button
  className="sc-kpOJdX Erhek"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the small success loading button correctly 1`] = `
<button
  className="sc-jDwBTQ gdDgyX"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the small warning loading button correctly 1`] = `
<button
  className="sc-jWBwVP ljvdll"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the tiny danger loading button correctly 1`] = `
<button
  className="sc-hSdWYo cNOpjl"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the tiny default loading button correctly 1`] = `
<button
  className="sc-hMqMXs gKsxvc"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the tiny primary loading button correctly 1`] = `
<button
  className="sc-dxgOiQ jKHFCg"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the tiny success loading button correctly 1`] = `
<button
  className="sc-gPEVay jRrHOX"
  onClick=""
/>
`;

exports[`ensuring loading buttons match snapshot renders the tiny warning loading button correctly 1`] = `
<button
  className="sc-brqgnP dYnmvc"
  onClick=""
/>
`;

exports[`ensuring regular buttons match snapshot renders the large danger button correctly 1`] = `
<button
  className="sc-htoDjs ilmbyB"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the large default button correctly 1`] = `
<button
  className="sc-ifAKCX gXHimt"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the large primary button correctly 1`] = `
<button
  className="sc-bdVaJa eSpynT"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the large success button correctly 1`] = `
<button
  className="sc-jzJRlG jQKmxs"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the large warning button correctly 1`] = `
<button
  className="sc-gqjmRU kSwMKk"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the medium danger button correctly 1`] = `
<button
  className="sc-dnqmqq fqAHdl"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the medium default button correctly 1`] = `
<button
  className="sc-EHOje bvtvJz"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the medium primary button correctly 1`] = `
<button
  className="sc-bwzfXH hLjXqq"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the medium success button correctly 1`] = `
<button
  className="sc-cSHVUG kdzsqe"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the medium warning button correctly 1`] = `
<button
  className="sc-VigVT ihOnE"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the small danger button correctly 1`] = `
<button
  className="sc-iwsKbI fRZLzk"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the small default button correctly 1`] = `
<button
  className="sc-bZQynM cRdmRb"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the small primary button correctly 1`] = `
<button
  className="sc-htpNat DQIND"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the small success button correctly 1`] = `
<button
  className="sc-kAzzGY jDrEQX"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the small warning button correctly 1`] = `
<button
  className="sc-jTzLTM jcbo"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the tiny danger button correctly 1`] = `
<button
  className="sc-gZMcBi hSPKAV"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the tiny default button correctly 1`] = `
<button
  className="sc-gzVnrw jruqmd"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the tiny primary button correctly 1`] = `
<button
  className="sc-bxivhb ebqhIa"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the tiny success button correctly 1`] = `
<button
  className="sc-chPdSV gSWEDB"
  onClick={[Function]}
/>
`;

exports[`ensuring regular buttons match snapshot renders the tiny warning button correctly 1`] = `
<button
  className="sc-fjdhpX jTOykx"
  onClick={[Function]}
/>
`;
